# obstore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  test-python.yml  wheels.yml
docs/: cookbook.md  getting-started.md  performance.md
docs/advanced/: pickle.md
docs/api/: attributes.md  copy.md  delete.md  exceptions.md  file.md  fsspec.md  get.md  head.md  list.md  put.md  rename.md  sign.md
docs/api/store/: aws.md  azure.md  config.md  gcs.md  http.md  index.md  local.md  memory.md  middleware.md
docs/blog/posts/: obstore-0.4.md
docs/dev/: pickle.md
docs/examples/: fastapi.md  minio.md
docs/overrides/stylesheets/: extra.css
docs/troubleshooting/: aws.md
examples/fastapi/: pyproject.toml
examples/fastapi-example/: main.py
examples/minio/: main.py  pyproject.toml
examples/progress-bar/: main.py  pyproject.toml
object-store-py/: Cargo.toml  pyproject.toml
object-store-py/python/object_store_py/: __init__.py  _copy.pyi  _delete.pyi  _get.pyi  _head.pyi  _list.pyi  _put.pyi  _rename.pyi  _sign.pyi
object-store-py/python/object_store_py/store/: _retry.pyi
object-store-py/src/: copy.rs  lib.rs
object-store-rs/: Cargo.toml
object-store-rs/python/object_store_rs/: _delete.pyi  _get.pyi  _list.pyi  _object_store_rs.pyi  _put.pyi
object-store-rs/src/: delete.rs  get.rs  head.rs  lib.rs  list.rs  path.rs  put.rs  signer.rs
obstore/: Cargo.toml  pyproject.toml
obstore/python/obstore/: _attributes.pyi  _buffer.pyi  _buffered.pyi  _get.pyi  _list.pyi  _obstore.pyi  _put.pyi  fsspec.py  store
obstore/python/obstore/store/: __init__.pyi  _aws.pyi  _azure.pyi  _client.pyi  _gcs.pyi  _http.pyi
obstore/src/: attributes.rs  buffered.rs  copy.rs  delete.rs  get.rs  head.rs  lib.rs  list.rs  put.rs  rename.rs  signer.rs
pyo3-bytes/: Cargo.toml  README.md  bytes.pyi
pyo3-bytes/src/: bytes.rs
pyo3-object_store/: Cargo.toml  README.md  type-hints
pyo3-object_store/src/: api.rs  aws.rs  azure.rs  client.rs  config.rs  error.rs  gcp.rs  http.rs  lib.rs  local.rs  memory.rs  path.rs  prefix.rs  retry.rs  runtime.rs  simple.rs  store.rs  url.rs
pyo3-object_store/src/aws/: mod.rs  shared_config.rs  store.rs
tests/: conftest.py  test_backoff.py  test_buffered.py  test_bytes.py  test_delete.py  test_fsspec.py  test_get.py  test_list.py  test_put.py
tests/store/: test_azure.py  test_config.py  test_from_url.py  test_gcs.py  test_http.py  test_local.py  test_prefix.py  test_s3.py
