[workspace]
members = ["object-store-rs", "pyo3-object_store"]
resolver = "2"

[workspace.package]
# Package version for arro3-*, not for pyo3-arrow
version = "0.4.2"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
homepage = "https://kylebarron.dev/arro3"
repository = "https://github.com/kylebarron/arro3"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow"]
categories = []
rust-version = "1.75"

[workspace.dependencies]
bytes = "1.7.0"
chrono = "0.4.38"
futures = "0.3.31"
http = "1.1"
object_store = "0.11"
pyo3 = { version = "0.22", features = ["macros"] }
pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes", features = [
    "tokio-runtime",
] }
pyo3-file = "0.9"
thiserror = "1"
tokio = "1.40"
url = "2"

[profile.release]
lto = true
codegen-units = 1
