[workspace]
members = ["object-store-py", "pyo3-object_store"]
resolver = "2"

[workspace.package]
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
homepage = "https://developmentseed.org/object-store-py"
repository = "https://github.com/developmentseed/object-store-py"
license = "MIT OR Apache-2.0"
keywords = ["python"]
categories = []
rust-version = "1.75"

[workspace.dependencies]
bytes = "1.7.0"
chrono = "0.4.38"
futures = "0.3.31"
http = "1.1"
indexmap = "2"
object_store = "0.11"
pyo3 = { version = "0.22", features = ["macros", "indexmap"] }
pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes", features = [
    "tokio-runtime",
] }
pyo3-file = "0.9"
thiserror = "1"
tokio = "1.40"
url = "2"

[patch.crates-io]
object_store = { git = "https://github.com/kylebarron/arrow-rs", branch = "kyle/list-returns-static-stream" }

[profile.release]
lto = true
codegen-units = 1
