[project]
name = "test-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "arro3-core>=0.4.2",
    "boto3>=1.35.38",
    "fsspec>=2024.10.0",
    "griffe-inherited-docstrings>=1.0.1",
    "ipykernel>=6.29.5",
    "maturin>=1.7.4",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.5.40",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
    "moto[s3,server]>=5.0.18",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.8.4"
]

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    # "E",
    "W",
    # isort
    "I",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
    "F403", # unable to detect undefined names
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
