[project]
name = "test-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cachetools>=5.5.1"]

[tool.uv]
dev-dependencies = [
    "arro3-core>=0.4.2",
    "boto3>=1.35.38",
    "fsspec>=2024.10.0",
    "griffe-inherited-docstrings>=1.0.1",
    "ipykernel>=6.29.5",
    "maturin>=1.7.4",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.6.3",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
    "moto[s3,server]>=5.0.18",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.8.4",
]

[tool.uv.workspace]
members = ["examples/fastapi-example"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",   # Missing docstring in public package
    "EM101",
    "FIX002", # Line contains TODO, consider resolving the issue
    "PYI021", # docstring-in-stub
    "PYI011", # typed-argument-default-in-stub
    "TD",     # Todo comments
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = [
    "ANN204", # Missing return type annotation for special method
    "E501",   # Line too long
]
"tests/*" = [
    "S101",    # assert
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function `it`
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison, consider replacing `100` with a constant variable
    "S301",    # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "SLF001",  # Private member accessed
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
    "F403", # unable to detect undefined names
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
