[package]
name = "pyo3-object_store"
version = "0.1.0-beta.1"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
description = "object_store integration for pyo3."
readme = "README.md"
repository = "https://github.com/developmentseed/obstore"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
rust-version = "1.75"
# Include the Python type hints as part of the cargo distribution
include = ["src", "type-hints", "README.md", "LICENSE"]

[dependencies]
async-trait = "0.1.85"
bytes = "1"
futures = "0.3"
# This is already an object_store dependency
humantime = "2.1"
# This is already an object_store dependency
itertools = "0.14.0"
object_store = { version = "0.11.2", features = [
    "aws",
    "azure",
    "gcp",
    "http",
] }
pyo3 = { version = "0.23", features = ["chrono", "indexmap"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
serde = "1"
thiserror = "1"
url = "2"

[patch.crates-io]
object_store = { git = "https://github.com/apache/arrow-rs", rev = "74499c0e7846cfbc498bf9fd7a2c1a4c8731c897" }

[lib]
crate-type = ["rlib"]
